@@ -109,7 +109,13 @@
 { \
 	if (!ptr) \
 	  { \
-		fprintf(stderr, "NULL param %s in %s\n", str, __FUNCTION__); \
+		fprintf(stderr, "***** Ewl Developer Warning ***** :\n" \
+				"\tThis program is calling:\n\n" \
+				"\t%s();\n\n" \
+				"\tWith the parameter:\n\n" \
+				"\t%s\n\n" \
+				"\tbeing NULL. Please fix your program.\n", \
+				__FUNCTION__, str); \
 		return; \
 	  } \
 }
@@ -118,20 +124,15 @@
 { \
 	if (!ptr) \
 	  { \
-		fprintf(stderr, "NULL param %s in %s.. returning %p\n", \
-				str, __FUNCTION__, (void *) ret); \
+		fprintf(stderr, "***** Ewl Developer Warning ***** :\n" \
+				"\tThis program is calling:\n\n" \
+				"\t%s();\n\n" \
+				"\tWith the parameter:\n\n" \
+				"\t%s\n\n" \
+				"\tbeing NULL. Please fix your program.\n", \
+				__FUNCTION__, str); \
 		return ret; \
 	  } \
-}
-
-#define DCHECK_PARAM_INT_RET(str, ptr, ret) \
-{ \
-        if (!ptr) \
-          { \
-                fprintf(stderr, "NULL param %s in %s.. returning %i\n", \
-                                str, __FUNCTION__, (int) ret); \
-                return ret; \
-          } \
 }
 
 #endif /* __EWL_DEBUG_H__ */
