@@ -46,7 +46,7 @@ static void *theme_keys[] = {
 	"/appearance/entry/default/base.bits.db",
 	"/appearance/entry/default/base/visible", "yes",
 	"/appearance/entry/default/text/font", "borzoib",
-	"/appearance/entry/default/text/font_size", (void *) 8,
+	"/appearance/entry/default/text/font_size", (void *) 10,
 	"/appearance/entry/default/text/style", "Default",
 
 	"/appearance/list/default/base",
